// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter-tile Renders \`filter-tile\` with custom props 1`] = `
<div
  class="pa-0 v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="layout align-center"
  >
    <div
      class="layout align-center"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate draggable ml-0 mr-3 action-drag-handler material-icons theme--light"
        style="font-size: 16px;"
      >
        drag_indicator
      </i>
      <div
        class="v-list-item__content"
      >
        Filter title
      </div>
    </div>
    <div
      class="v-list-item__action"
    >
      <div
        class="layout align-center"
      >
        <c-action-btn-stub
          type="edit"
        />
        <c-action-btn-stub
          type="delete"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`filter-tile Renders \`filter-tile\` with default props 1`] = `
<div
  class="pa-0 v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="layout align-center"
  >
    <div
      class="layout align-center"
    >
      <!---->
      <div
        class="v-list-item__content"
      />
    </div>
    <!---->
  </div>
</div>
`;

exports[`filter-tile Renders \`filter-tile\` with old pattern 1`] = `
<div
  class="pa-0 v-list-item theme--light"
  tabindex="-1"
>
  <div
    class="layout align-center"
  >
    <div
      class="layout align-center"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate draggable ml-0 mr-3 action-drag-handler material-icons theme--light"
        style="font-size: 16px;"
      >
        drag_indicator
      </i>
      <div
        class="v-list-item__content"
      >
        Filter title
      </div>
    </div>
    <div
      class="v-list-item__action"
    >
      <div
        class="layout align-center"
      >
        <c-action-btn-stub
          type="edit"
        />
        <c-action-btn-stub
          type="delete"
        />
      </div>
    </div>
  </div>
</div>
`;
